--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-rtl": "^0.9.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "@types/dompurify": "^3.2.0",
+    "dompurify": "^3.2.5",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -42,6 +45,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
+    "@types/dompurify": "^3.2.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
