--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "tailwindcss-rtl": "^0.9.0",
     "uuid": "^11.1.0",
     "@types/dompurify": "^3.2.0",
-    "dompurify": "^3.2.5",
-    "react-quill": "^2.0.0"
+    "dompurify": "^3.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
